Added css to first part

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <title>Project with Paulina's portfolio</title>
 </head>
 <body>
-    <div class="d-flex">
-    <h1>Your mom <i class="fa-brands fa-instagram"></i></h1>
-    <p> No, your mom!</p>
-   </div>
+    <div class="hero">
+    <p>Hi, I am</p>
+    <h1> Patricia Pareira </h1>
+    <h2 class="mb-3">Front end developer, based in Portugal</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Get started</a>
+</div>
+</div>
 </body>
 </html>
