--- a/index.html
+++ b/index.html
@@ -22,5 +22,56 @@
     <a href="#" class="btn btn-branding">Get started</a>
 </div>
 </div>
+<p class="text-center m-5">Featured Project which my best projects be choice to show</p>
+<div class="container">
+    
+    <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/yogurt.png" alt="Image of yogurt app" class="img-fluid"/>
+        </div>
+        <div class="col">
+           <div class="project-description">
+                <h2 class="mb-5">Yogurt Project</h2>
+                <p class="mb-5 text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <a href="#" class="btn btn-branding-outline">Launch project</a>
+        </div>
+        </div>
+    </div>
+    <div class="row mb-5">
+       
+        <div class="col">
+           <div class="project-description">
+                <h2 class="mb-5">Weather Project</h2>
+                <p class="mb-5 text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <a href="#" class="btn btn-branding-outline">Launch project</a>
+        </div>
+        </div>
+         <div class="col d-none d-lg-block">
+            <img src="images/weather.png" alt="Image of yogurt app" class="img-fluid"/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col d-none d-lg-block">
+            <img src="images/dictonary.png" alt="Image of yogurt app" class="img-fluid"/>
+        </div>
+        <div class="col">
+           <div class="project-description">
+                <h2 class="mb-5">DictonaryProject</h2>
+                <p class="mb-5 text-muted">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                </p>
+                <a href="#" class="btn btn-branding-outline">Launch project</a>
+        </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
