--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="hero">
     <p>Hi, I am</p>
-    <h1> Patricia Pareira </h1>
-    <h2 class="mb-3">Front end developer, based in Portugal</h2>
+    <h1> Paulina Pogwizd </h1>
+    <h2 class="mb-3">Front end developer, based in Denmark</h2>
     <div>
     <a href="#" class="btn btn-branding">Get started</a>
 </div>
@@ -27,11 +27,11 @@
     
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/yogurt.png" alt="Image of yogurt app" class="img-fluid"/>
+            <img src="images/Ai recipe.png" alt="Image of ai generator app" class="img-fluid"/>
         </div>
         <div class="col">
            <div class="project-description">
-                <h2 class="mb-5">Yogurt Project</h2>
+                <h2 class="mb-5">AI recipes generator</h2>
                 <p class="mb-5 text-muted">
                     Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
@@ -44,7 +44,7 @@
        
         <div class="col">
            <div class="project-description">
-                <h2 class="mb-5">Weather Project</h2>
+                <h2 class="mb-5">World Clock project</h2>
                 <p class="mb-5 text-muted">
                     Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
@@ -53,16 +53,16 @@
         </div>
         </div>
          <div class="col d-none d-lg-block">
-            <img src="images/weather.png" alt="Image of yogurt app" class="img-fluid"/>
+            <img src="images/world clock.png" alt="Image of world clock app" class="img-fluid"/>
         </div>
     </div>
     <div class="row">
         <div class="col d-none d-lg-block">
-            <img src="images/dictonary.png" alt="Image of yogurt app" class="img-fluid"/>
+            <img src="images/croissant.png" alt="Image of croissant site" class="img-fluid"/>
         </div>
         <div class="col">
            <div class="project-description">
-                <h2 class="mb-5">DictonaryProject</h2>
+                <h2 class="mb-5">Croisasnt Project</h2>
                 <p class="mb-5 text-muted">
                     Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
