Added About page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="hero">
     <p>Hi, I am</p>
-    <h1> Paulina Pogwizd </h1>
+    <h1> PauPog </h1>
     <h2 class="mb-3">Front end developer, based in Denmark</h2>
     <div>
     <a href="#" class="btn btn-branding">Get started</a>
