Get started to About me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1> PauPog </h1>
     <h2 class="mb-3">Front end developer, based in Denmark</h2>
     <div>
-    <a href="#" class="btn btn-branding">Get started</a>
+    <a href="about.html" class="btn btn-branding">Get started</a>
 </div>
 </div>
 <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
@@ -36,7 +36,7 @@
                     Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
                     Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                 </p>
-                <a href="#" class="btn btn-branding-outline">Launch project</a>
+                <a href="about.html" class="btn btn-branding-outline">Launch project</a>
         </div>
         </div>
     </div>
