--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1> PauPog </h1>
     <h2 class="mb-3">Front end developer, based in Denmark</h2>
     <div>
-    <a href="/about.html" class="btn btn-branding">Get started</a>
+    <a href="about.html" class="btn btn-branding">Get started</a>
 </div>
 </div>
 <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
