--- a/work.html
+++ b/work.html
@@ -15,21 +15,31 @@
 </head>
 <body>
     <div class="content-container container">
-    <div class="row">
-        <div class="col-md-6">
             <div class="content">
-    <h1 class="mb-5">Hi I am Paulina Pogwizd</h1>
-    <h2 class="mb-5">Front-end developer, based in Copenhagen, Denmark</h2>
-    <p class="mb-4"> Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-   </p>
-    <a href="" class="btn btn-branding"> View all projects</a>
-</div>
-</div>
-<div class="col-lg-6">
-    <img src="images/image 38.png" alt="patricia" class="img-fluid rounded"/>
-</div>
-</div>
+    <h1 class="mb-5">Take a look at what I've been working on!</h1>
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <h3 class="text-center m-0">Some Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+        </div>
+        <div class="col-md-6">
+            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <h3 class="text-center m-0">Some Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+        </div>
+        <div class="col-md-6">
+            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <h3 class="text-center m-0">Some Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+        </div>
+        <div class="col-md-6">
+            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <h3 class="text-center m-0">Some Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+        </div>
+    </div>
+    </div>
     </div>
 </body>
 </html>
