--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css"> 
     <title>Project with Paulina's portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="">
+<img src="images/logo1.png" class="logo d-none d-sm-block" alt=""></a>
+        <ul>
+            <li class="active">
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/about.html">About</a>
+            </li>
+            <li>
+                <a href="/work.html">Work</a>
+            </li>
+            <li class="active">
+                <a href="/contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    </div>
     <div class="content-container container">
             <div class="content">
     <h1 class="mb-5">Let's get in touch!</h1>
