heading and footer

--- a/about.html
+++ b/about.html
@@ -40,16 +40,21 @@
     <div class="row">
         <div class="col-md-6">
             <div class="content">
-    <h1 class="mb-5">Hi I am Paulina Pogwizd</h1>
+    <h1 class="mb-5">Hi I am Paulina! </h1>
     <h2 class="mb-5">Front-end developer, based in Copenhagen, Denmark</h2>
-    <p class="mb-4"> Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-   </p>
-    <a href="" class="btn btn-branding"> View all projects</a>
+    <p class="mb-4">I'm a passionate front-end developer based in Europe. My journey in web development started with curiosity and has grown into a love for creating user-friendly and visually engaging websites. With a strong foundation in HTML, CSS, and JavaScript, I enjoy combining clean code with modern design.
+    </br>
+        I'm currently expanding my skills through the SheCodes workshops, where I’ve gained valuable insights and guidance from Matt Delac and his amazing team. Their support has helped me build interactive applications and responsive websites that reflect my creativity and attention to detail.
+</br>
+Outside of coding, I enjoy spending my free time crocheting and relaxing with my favorite projects. I’m also a huge dog lover and find so much joy in being around dogs—they truly make every day brighter!
+</br>
+        Looking ahead, I aim to transition into a full-time front-end developer role, where I can contribute to innovative projects and continue growing my expertise in frameworks like React and Next.js. If you'd like to collaborate or connect, feel free to reach out!
+    </p>
+        <a href="" class="btn btn-branding"> View all projects</a>
 </div>
 </div>
 <div class="col-lg-6">
-    <img src="images/image 38.png" alt="patricia" class="img-fluid rounded"/>
+    <img src="images/Me.jpeg" alt="patricia" class="img-fluid rounded"/>
 </div>
 </div>
     </div>
