--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="">
+            <a href="/">
 <img src="images/logo1.png" class="logo d-none d-sm-block" alt=""></a>
         <ul>
-            <li class="active">
+            <li>
                 <a href="/">Home</a>
             </li>
             <li>
