--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="">
+            <a href="/">
 <img src="images/logo1.png" class="logo d-none d-sm-block" alt=""></a>
         <ul>
             <li>
