Addidng real description

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <a href="/work.html">Work</a>
             </li>
             <li>
-                <a href="/contact.html">Contact</a>
+                <a href="/contact.html" class="btn btn-branding">Contact</a>
             </li>
         </ul>
     </nav>
@@ -50,7 +50,7 @@ Outside of coding, I enjoy spending my free time crocheting and relaxing with my
 </br>
         Looking ahead, I aim to transition into a full-time front-end developer role, where I can contribute to innovative projects and continue growing my expertise in frameworks like React and Next.js. If you'd like to collaborate or connect, feel free to reach out!
     </p>
-        <a href="" class="btn btn-branding"> View all projects</a>
+        <a href="/work.html" class="btn btn-branding"> View all projects</a>
 </div>
 </div>
 <div class="col-lg-6">
