Added real description to projects

--- a/index.html
+++ b/index.html
@@ -53,28 +53,32 @@
                     <a href="about.html" class="btn btn-branding">About me</a>
          </div>
          </div>
-        <div class="col">
+        <div class="col-md">
            <div class="project-description">
                 <h2 class="mb-5">Contact</h2>
                 <p class="mb-5 text-muted">
                     Feel free to reach out to me for collaborations, inquiries, or just to connect! I'm always open to discussing new projects or opportunities where I can contribute my skills in front-end development and web design. </p>
-                <a href="about.html" class="btn btn-branding">Contact</a>
+                </br>
+            </br>
+        </br>
+
+                    <a href="about.html" class="btn btn-branding">Contact</a>
         </div>
         </div>
     </div>
     
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/Ai recipe.png" alt="Image of ai generator app" class="img-fluid"/>
+            <img src="" alt="Image of ai generator app" class="img-fluid"/>
         </div>
         <div class="col">
            <div class="project-description">
                 <h2 class="mb-5">AI recipes generator</h2>
                 <p class="mb-5 text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-                </p>
-                <a href="about.html" class="btn btn-branding-outline">Launch project</a>
+                    The AI Recipes Generator is an app that helps create vegetarian recipes based on the ingredients you have in your fridge. Simply input the available items, and the app will generate creative and healthy meal ideas. It's the perfect solution for minimizing food waste and finding culinary inspiration. </p>
+                <a href="https://recipesgenerator.netlify.app/" class="btn btn-branding-outline"
+                target="_blank">
+                Launch project</a>
         </div>
         </div>
     </div>
@@ -84,10 +88,10 @@
            <div class="project-description">
                 <h2 class="mb-5">World Clock project</h2>
                 <p class="mb-5 text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-                </p>
-                <a href="#" class="btn btn-branding-outline">Launch project</a>
+                    The World Clock is a tool that allows you to check the exact time in various time zones around the world. With its intuitive interface, you can quickly select the locations you’re interested in and track the time in real time. This app is ideal for people working with international teams or frequent travelers.  </p>
+                <a href="https://world-clocken.netlify.app/" class="btn btn-branding-outline"
+                target="_blank">
+                Launch project</a>
         </div>
         </div>
          <div class="col d-none d-lg-block">
@@ -96,23 +100,24 @@
     </div>
     <div class="row">
         <div class="col d-none d-lg-block">
-            <img src="images/croissant.png" alt="Image of croissant site" class="img-fluid"/>
+            <img src="" alt="Image of croissant site" class="img-fluid"/>
         </div>
         <div class="col">
            <div class="project-description">
-                <h2 class="mb-5">Croisasnt Project</h2>
+                <h2 class="mb-5">Weather App</h2>
                 <p class="mb-5 text-muted">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                    Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                    The Weather App provides up-to-date weather information for your selected city. It displays temperature, weather conditions, and a forecast for the coming days in a clear and easy-to-read format. This app is essential for planning trips or daily activities.
+
                 </p>
-                <a href="#" class="btn btn-branding-outline">Launch project</a>
+                <a href="https://pog-odapp.netlify.app/" class="btn btn-branding-outline"
+                target="_blank">
+                Launch project</a>
         </div>
         </div>
     </div>
-    <footer>
-        <div class="d-flex justify-content-center">
-        <a href="mailto:paulinampogwizd@gmail.com" class="email-link">paulinampogwizd@gmail.com</a>
-    </div>
+   
+</div>
+ <footer>
         <div class="social-links d-flex justify-content-center">
             <a href=""> <i class="fa-brands fa-instagram"></i></a>
           <a href=""><i class="fa-brands fa-github"></i></a>
@@ -122,7 +127,5 @@
         
         </div>
     </footer>
-</div>
-
 </body>
 </html>
