--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
                 <a href="/work.html">Work</a>
             </li>
             <li>
-                <a href="/contact.html">Contact</a>
+                <a href="/contact.html" class="btn btn-branding">Contact</a>
             </li>
         </ul>
     </nav>
@@ -39,27 +39,25 @@
     <div class="content-container container">
             <div class="content">
     <h1 class="mb-5">Take a look at what I've been working on!</h1>
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-md-6 mb-4">
             <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
-            <h3 class="text-center m-0">Some Project</h3>
+            <h3 class="text-center m-0">World Clock</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>
         <div class="col-md-6">
             <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
-            <h3 class="text-center m-0">Some Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
         </div>
-        <div class="col-md-6">
-            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
-            <h3 class="text-center m-0">Some Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+        <div class="container d-flex justify-content-center align-items-center" >
+            <div class="col-md-6 text-center">
+                <img src="images/Ai recipe.png" alt="" class="img-fluid rounded mb-3" >
+                <h3 class="m-0">AI Recipes Generator</h3>
+                <p class="text-muted">Built with HTML, CSS and JavaScript</p>
+            </div>
         </div>
-        <div class="col-md-6">
-            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
-            <h3 class="text-center m-0">Some Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
-        </div>
+        
     </div>
     </div>
     </div>
