--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ Outside of coding, I enjoy spending my free time crocheting and relaxing with my
 </div>
 </div>
 <div class="col-lg-6">
-    <img src="images/Me.jpeg" alt="patricia" class="img-fluid rounded"/>
+    <img src="images/Me.png" alt="patricia" class="img-fluid rounded"/>
 </div>
 </div>
     </div>
