--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
     <div class="row">
         <div class="col d-none d-lg-block">
-            <img src="" alt="Image of croissant site" class="img-fluid"/>
+            <img src="images/weather.png" alt="Image of weather app" class="img-fluid"/>
         </div>
         <div class="col">
            <div class="project-description">
