--- a/work.html
+++ b/work.html
@@ -41,18 +41,27 @@
     <h1 class="mb-5">Take a look at what I've been working on!</h1>
     <div class="row mt-5">
         <div class="col-md-6 mb-4">
-            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <a href="https://world-clocken.netlify.app/"
+            target="_blank">
+            <img src="images/world clock.png" alt="" class="img-fluid rounded clock-image">
+        </a>
             <h3 class="text-center m-0">World Clock</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>
         <div class="col-md-6">
-            <img src="images/Ai recipe.png" alt="" class="img-fluid rounded">
+            <a href="https://pog-odapp.netlify.app/" 
+            target="_blank">
+            <img src="images/weather.png" alt="" class="img-fluid rounded weather-image">
+        </a>
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
         </div>
         <div class="container d-flex justify-content-center align-items-center" >
             <div class="col-md-6 text-center">
-                <img src="images/Ai recipe.png" alt="" class="img-fluid rounded mb-3" >
+                <a href="https://recipesgenerator.netlify.app/" 
+                target="_blank">
+                <img src="images/ai .png" alt="" class="img-fluid rounded mb-3 ai-image" >
+            </a>
                 <h3 class="m-0">AI Recipes Generator</h3>
                 <p class="text-muted">Built with HTML, CSS and JavaScript</p>
             </div>
