--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Paulina is a front-end developer based in Denmark">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
   
@@ -13,25 +14,26 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css"> 
+
     <title>Project with Paulina's portfolio</title>
 </head>
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="">
-<img src="images/logo1.png" class="logo d-none d-sm-block" alt=""></a>
+<img src="images/logo1.png" class="logo d-none d-sm-block" alt="personal logo" title="homepage"></a>
         <ul>
             <li class="active">
-                <a href="/">Home</a>
+                <a href="/" title="homepage">Home</a>
             </li>
             <li>
-                <a href="/about.html">About</a>
+                <a href="/about.html" title="About Paulina">About</a>
             </li>
             <li>
-                <a href="/work.html">Work</a>
+                <a href="/work.html"title="Paulina's portfolio">Work</a>
             </li>
             <li>
-                <a href="/contact.html" class="btn btn-branding">Contact</a>
+                <a href="/contact.html" class="btn btn-branding"title="contact page">Contact</a>
             </li>
         </ul>
     </nav>
@@ -117,19 +119,31 @@
     </div>
    
 </div>
+<div class="work-inquiry rounded">
+    <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-6">
+            <h2>Work Inquiry</h2>
+            <p>Let's work together</p>
+        </div>
+        <div class="col-6">
+            <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
+        </div>
+    </div>
+   
+</div>
  <footer>
         <div class="social-links d-flex justify-content-center">
             <a href="https://instagram.com" 
             target="_blank"> 
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram" title="instagram"></i>
         </a>
           <a href="https://github.com/Paupog" 
           target="_blank">
-          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-github"title="Github"></i>
         </a>
         <a href="https://facebook.com" 
         target="_blank">
-        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-facebook" title="facebook"></i>
     </a>
        
         
