fixed screen size

--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-sm-6">
                 <h2>Work Inquiry</h2>
-                <p class="d-none d-lg-block">Let's work together</p>
+                <p class="d-none d-md-block">Let's work together</p>
             </div>
             <div class="col-6">
                 <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
