--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
                     Feel free to reach out to me for collaborations, inquiries, or just to connect! I'm always open to discussing new projects or opportunities where I can contribute my skills in front-end development and web design. </p>
                 </br>
             </br>
-        </br>
-
-                    <a href="contact.html" class="btn btn-branding">Contact</a>
+        
+                    <a href="contact.html" class="btn btn-branding mt-3" >Contact</a>
         </div>
         </div>
     </div>
