--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                  <h2 class="mb-5">About me</h2>
                  <p class="mb-5 text-muted">
                     I am a passionate front-end developer based in Europe, dedicated to creating visually engaging and user-friendly websites. With a strong foundation in HTML, CSS, and JavaScript, I enjoy transforming ideas into seamless digital experiences. My goal is to continuously grow my skills while delivering impactful projects that inspire and connect users.                 </p>
-                    <a href="about.html" class="btn btn-branding">About me</a>
+                    <a href="about.html" class="btn btn-branding mb-5">About me</a>
          </div>
          </div>
         <div class="col-md">
