--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     The Weather App provides up-to-date weather information for your selected city. It displays temperature, weather conditions, and a forecast for the coming days in a clear and easy-to-read format. This app is essential for planning trips or daily activities.
 
                 </p>
-                <a href="https://pog-odapp.netlify.app/" class="btn btn-branding-outline"
+                <a href="https://pog-odapp.netlify.app/" class="btn btn-branding-outline mb-5"
                 target="_blank">
                 Launch project</a>
         </div>
