--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
         </div>
-        <div class="container d-flex justify-content-center align-items-center" >
+        <div class="container d-flex justify-content-center align-items-center mt-5" >
             <div class="col-md-6 text-center">
                 <a href="https://recipesgenerator.netlify.app/" 
                 target="_blank">
